feat: setup empty state and error state

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="sort">Urutkan</string>
     <string name="price">$%s</string>
     <string name="cheapest_price_ever">cheapest price ever</string>
+    <string name="something_wrong">Something Went Wrong. Check your Internet Connection!</string>
+    <string name="no_data">No data found.</string>
 </resources>
